<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="PaletteBinding">

    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.jepack.lib.widget.PaletteProgressView
            android:id="@+id/palette_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/palette_clip_type_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palette_type_tip"
            app:layout_constraintTop_toBottomOf="@id/palette_progress"/>
        <RadioGroup
            android:id="@+id/palette_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/palette_clip_type_tip"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_type_rec"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_type_circle"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_type_wave"/>
        </RadioGroup>
        <TextView
            android:id="@+id/palette_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palette_direction"
            app:layout_constraintTop_toBottomOf="@id/palette_type"/>
        <RadioGroup
            android:id="@+id/palette_direction_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/palette_tip">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_ltr"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_rtl"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_ttb"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palette_btt"/>
        </RadioGroup>
        <SeekBar
            android:id="@+id/progress_ctr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/palette_direction_group"/>
    </android.support.constraint.ConstraintLayout>
</layout>